[GSM is Greg Sabino Mullane <greg@endpoint.com> <greg@turnstep.com> ]

Bucardo version 4.x.x

  - Fix for proper sourcelimit and targetlimit calculations. [GSM]

  - Allow 'list sync' to filter by 'active' and 'inactive' [GSM]

  - Remove unused config variable 'upsert_attempts' [GSM]

  - Show detailed information on KID error exit. [GSM]

  - Relax SELECT version() regex in bucardo_ctl, to let modified versions 
    of Postgres tell us their version. [GSM]

Bucardo version 4.4.0, released October 14, 2009

  - Allow validate_goat() to work correctly against pgbouncer databases by 
    respecting the server_side_prepares parameter. [GSM]

  - Loosen restrictions on customcode - now the derived columns must match 
    the target, but the target and source tables can be completely different. [GSM]

  - Add the bucardo_audit() function that runs on all master databases, ensures 
    that everything related to the bucardo_* control tables is correct.
    [Josh Tolley and GSM]

  - Fix bucardo_ctl add sync ... tables=x - now adds the sync on first pass, 
    even if the tables have not been added. [GSM]

  - Adding customcode via bucardo_ctl can now specify sync, goat, priority, 
    and active columns. [GSM]

  - When viewing customcode via 'bucardo_ctl list code foo', the src_code column 
    is shown last. [GSM]

  - Add some small sleeps before checking for stale pid files, to allow their owners 
    a chance to clean them up first. [GSM]

  - Give a warning when kicking an inactive sync. [GSM]

  - Remove 'text' casting which prevented 'bucardo_ctl inspect' from working on 
    older versions of Postgres. [GSM]

  - Allow testing of multiple versions of Postgres at the same time by setting the 
    environment variables PGBINDIR[A-Z]. [GSM]

Bucardo version 4.3.0, released October 8, 2009

  - Allow MCP and CTL to kill based on piddir, not just audit_pid. This will prevent duplicate 
    kids from existing if audit_pid is switched off. [GSM]
