@@ -234,8 +234,9 @@ CREATE TABLE bucardo.goat (
   has_delta          BOOLEAN     NOT NULL DEFAULT 'false',
   ping               BOOLEAN         NULL,                 -- overrides sync-level ping
   customselect       TEXT            NULL,
-  makedelta          BOOLEAN         NULL,
-  rebuild_index      SMALLINT    NOT NULL DEFAULT 0,       -- overrides sync-level rebuild_index
+  source_makedelta   SMALLINT        NULL,
+  target_makedelta   SMALLINT        NULL,
+  rebuild_index      SMALLINT        NULL DEFAULT 0,       -- overrides sync-level rebuild_index
   ghost              BOOLEAN     NOT NULL DEFAULT 'false', -- only drop triggers, do not replicate
   standard_conflict  TEXT            NULL,
   analyze_after_copy BOOLEAN     NOT NULL DEFAULT 'true',
@@ -380,7 +381,8 @@ CREATE TABLE bucardo.sync (
   do_listen          BOOLEAN     NOT NULL DEFAULT false,     -- LISTEN for kicks on source/target database if ! ping
   checktime          INTERVAL        NULL,                   -- How often to check if we've not heard anything?
   status             TEXT        NOT NULL DEFAULT 'active',  -- Possibly CHECK / FK ('stopped','paused','b0rken')
-  makedelta          BOOLEAN     NOT NULL DEFAULT 'false',
+  source_makedelta   SMALLINT        NULL,
+  target_makedelta   SMALLINT        NULL,
   rebuild_index      SMALLINT    NOT NULL DEFAULT 0,     -- Load without indexes and then REINDEX table
   priority           SMALLINT    NOT NULL DEFAULT 0,     -- Higher is better
   txnmode            TEXT        NOT NULL DEFAULT 'SERIALIZABLE',
