@@ -2,6 +2,9 @@
 
 Bucardo version 4.x.x
 
+  - Redo the makedelta system, and break into source_makedelta and target_makedelta 
+    options for both syncs and goats. [GSM]
+
   - Fix for proper sourcelimit and targetlimit calculations. [GSM]
 
   - Allow 'list sync' to filter by 'active' and 'inactive' [GSM]
